--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.8",
-    "@docusaurus/preset-classic": "2.0.0-beta.8",
+    "@docusaurus/core": "^2.0.0-beta.9",
+    "@docusaurus/preset-classic": "^2.0.0-beta.9",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
@@ -24,12 +24,12 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-ducky": "^0.0.1",
+    "react-ducky": "^0.0.2",
     "redux": "^4.1.2",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.8",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.9",
     "@tsconfig/docusaurus": "^1.0.4",
     "docusaurus-plugin-module-alias": "^0.0.2",
     "typescript": "^4.3.5"
